Fixed BlockDropItemEvent not triggering because BlockBreakEvent was being cancelled/not dropping items, causing some plugins that modify this event to not work properly